--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "practice",
+  "name": "mineralMemory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kalindrov.github.io/mineralMemory/",
+  "devDependencies": {
+    "gh-pages": "^1.2.0",
+    "react-scripts": "1.1.1"
+  },
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
