updated react scripts

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "homepage": "https://kalindrov.github.io/mineralMemory/",
   "devDependencies": {
-    "gh-pages": "^1.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "^1.1.1"
   },
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "yarn": "^1.5.1"
   },
   "scripts": {
     "predeploy": "npm run build",
