--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "mineralMemory",
+  "name": "elementClix",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kalindrov.github.io/mineralMemory/",
+  "homepage": "https://kalindrov.github.io/elementClix/",
   "devDependencies": {
-    "react-scripts": "^1.1.1"
+    
   },
   "dependencies": {
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "yarn": "^1.5.1"
+    "react-scripts": "^1.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
